k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mysql-deployment 
  labels:
    project: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
        role: db
    spec:
      containers:
        - name: mysql
          image: mysql:8.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432 # Exposing the container port 5432 for PostgreSQL client connections.
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysqlsdata
      volumes:
        - name: mysqldata
          persistentVolumeClaim:
            claimName: mysql-volume-claim
