k8s/phpmyadmin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: phpmyadmin-deployment
spec:
 replicas: 1
 selector:
    matchLabels:
      app: phpmyadmin
 template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
        - containerPort: 80
