k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    project: test
spec:
  type: LoadBalancer
  selector:
    app: flask-backend
  ports:
  - port: 80
    name: http
    targetPort: 80
